--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div data-note "13" class = "key white"></div>
   </div>
   
-  <audio id = "piano-sound" src = "piano-C5.wav"></audio>
+  <audio id = "piano-sound" src = "nota/piano-C5.wav"></audio>
   
 </body>
 </html>
